force-app/main/default/objects/Expense_Budget__c/Expense_Budget__c.object-meta.xml
<CustomObject>
    <description>To set and track financial goals for expenses.</description>
    <label>Expense Budget</label>
    <nameField>
        <label>ExpenseBudget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>