force-app/main/default/objects/Expense_Budget__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The category or purpose of the expense (Student Program, Community  Events, Dialog Expenses etc)</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rumi - Kira</fullName>
            </value>
            <value>
                <fullName>Dialog Commitee</fullName>
            </value>
            <value>
                <fullName>Business Expenses</fullName>
            </value>
            <value>
                <fullName>Community Events</fullName>
            </value>
            <value>
                <fullName>Mentor Expenses</fullName>
            </value>
            <value>
                <fullName>Rehberlik</fullName>
            </value>
            <value>
                <fullName>NE Platform odemesi</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>