force-app/main/default/objects/Expense_Budget__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>The fiscal year for which the budget is planned (e.g 23/24 FY)</description>
    <inlineHelpText>Buffalo Up fiscal year starts from July to June like 23/24 FY means 1 July 2023 to 30 June 2024</inlineHelpText>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fiscal_Year</valueSetName>
    </valueSet>
</CustomField>