force-app/main/default/objects/Expense_Budget__c/fields/Total_Amount_Left_to_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Left_to_Spend__c</fullName>
    <description>The remaining amount of expenses to be spent, calculated as Planned Amount - Total Amount Spent.</description>
    <formula>Planned_Amount__c -  Total_Amount_Spent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Left to Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>