force-app/main/default/objects/Expense_Budget__c/fields/Total_Amount_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Spent__c</fullName>
    <description>The total amount of expenses spent for the fiscal year.</description>
    <label>Total Amount Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>