force-app/main/default/objects/Expense_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Planned_Amount__c</columns>
    <columns>Total_Amount_Spent__c</columns>
    <columns>Total_Amount_Left_to_Spend__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>